// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button default 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: 0;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`Storyshots Atoms/Button props onClick 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: 0;
}

<button
  className="c0"
  onClick={[Function]}
>
  Button
</button>
`;
